--- a/.gitignore
+++ b/.gitignore
@@ -16,5 +16,4 @@ tmp/
 # Ignore sensitive credentials
 .env
 myenv
-
-The-GridFather\src\final_code\fine_tuned_t5_crossword
+src\final_code\fine_tuned_t5_crossword
